--- a/DAD/Holamundo/pom.xml
+++ b/DAD/Holamundo/pom.xml
@@ -7,7 +7,16 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<dependencies>
-
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-mqtt</artifactId>
+			<version>3.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.collections</groupId>
+			<artifactId>google-collections</artifactId>
+			<version>1.0-rc2</version>
+		</dependency>
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
