--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,5 @@ DAD/.metadata/.log
 .metadata/.mylyn/.taskListIndex/segments_1
 .metadata/.log
 .metadata/.lock
+DAD/.metadata/.log
+DAD/.metadata/.log
